@@ -1,3 +1,8 @@
+2008-06-21  Seiji Zenitani  <zenitani@mac.com>
+            Ryo Yoshitake  <ryo@shiftmode.net>
+
+	* xterm.c (x_set_frame_alpha): Add x_catch_errors for bug#437.
+
 2008-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* Makefile.in (${lisp} ${SOME_MACHINE_LISP}, ../lisp/loaddefs.el):
